--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./lib/leaflet/leaflet.css">
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="./node_modules/leaflet/dist/leaflet.css">
     <link rel="stylesheet" href="./css/style.css">
 
 
@@ -45,8 +45,8 @@
 
     </div>
 
-    <script src="./lib/angular.js"></script>
-    <script src="./lib/leaflet/leaflet.js"></script>
+    <script src="./node_modules/angular/angular.js"></script>
+    <script src="./node_modules/leaflet/dist/leaflet.js"></script>
     <script src="./js/app.js"></script>
 
     <script src="./js/controllers/appMapCtrl.js"></script>
